argo/routed-svcs/gateway-check/templates/extra-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-namespace
spec:
  podSelector: {}
  egress:
    # Unless it's cluster traffic
    - to:
      - ipBlock:
          cidr: 10.233.0.0/16
      - ipBlock:
          cidr: 192.168.0.0/16
      - ipBlock:
          cidr: 169.254.25.10/32
  ingress:
    - from:
        # Only allow ingress from K8S
      - ipBlock:
          cidr: 10.233.0.0/16
      - ipBlock:
          cidr: 192.168.0.0/16
      - ipBlock:
          cidr: 169.254.25.10/32
  policyTypes:
    - Ingress
    - Egress
